--- a/requirements.txt
+++ b/requirements.txt
@@ -78,6 +78,7 @@ openai>=1.3.3
 orjson>=3.10.18
 ormsgpack>=1.10.0
 packaging>=24.2
+pandas
 pillow>=11.2.1
 primp>=0.15.0
 propcache>=0.3.1
@@ -129,3 +130,4 @@ zstandard>=0.23.0
 # Model Context Protocol support (optional)
 mcp>=1.0.0
 langchain-mcp-adapters>=0.1.0  # LangChain MCP adapters for tool integration
+openpyxl
